<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopOwnerSignUp"
    android:background="@color/myPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_text_view"
        android:textSize="40sp"
        android:fontFamily="@font/aquarium"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="15"
        android:shadowColor="@color/colorPrimaryDark"

        />



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_username"
        app:endIconMode="clear_text"
        android:elevation="10dp"
        app:boxStrokeColor="@color/textFieldStroke"
        app:hintTextColor="@color/colorAccent"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        tools:targetApi="lollipop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_password"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="@color/textFieldStroke"
        app:hintTextColor="@color/colorAccent"
        android:elevation="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        tools:targetApi="lollipop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_email"
        app:endIconMode="clear_text"
        app:boxStrokeColor="@color/textFieldStroke"
        app:hintTextColor="@color/colorAccent"
        android:elevation="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        tools:targetApi="lollipop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="10dp"
        android:text="Signup"
        android:fontFamily="@font/aquarium"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginLeft="24dp"/>
    <TextView
        android:id="@+id/sign_in_text_view"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/signin_text_view"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:textColor="@color/clickableTextView"
        />

</LinearLayout>

</LinearLayout>