<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PathSelection">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:gravity="center"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/onlineshopidark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:text="@string/we_know_what_you_want"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/unforgotten1"
                android:textColor="#fff"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="15"
                android:text="@string/choose_your_browsing_option"
                android:textColor="#fff"
                android:fontFamily="@font/unforgotten1"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/shopper_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:elevation="10dp"
                android:fontFamily="@font/aquarium"
                android:text="@string/buyer_button"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:cornerRadius="10dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/shop_owner_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                android:background="@color/colorPrimaryDark"
                android:elevation="10dp"
                android:fontFamily="@font/aquarium"
                android:text="@string/shop_owner_button"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>